--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "next": "14.1.0",
     "react": "^18.3",
     "react-dom": "^18.3",
-    "thirdweb": "^5"
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.4.0",
+    "thirdweb": "^5",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
