--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "next": "14.1.0",
+    "pg": "^8.13.1",
     "react": "^18.3",
     "react-dom": "^18.3",
     "react-fast-marquee": "^1.6.5",
