--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "motion": "^11.17.0",
     "next": "14.1.0",
     "pg": "^8.13.1",
     "react": "^18.3",
