--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.17.0",
     "gsap": "^3.12.5",
     "motion": "^11.17.0",
     "next": "14.1.0",
